Add Doctors to api
