# modules/doctors/routes/doctors.routes.js
@@ -1,0 +1,9 @@
+const { Router } = require("express");
+const doctorsController = require("../controllers/doctors.controller");
+const verifyToken = require("../../../middlewares/verify-token");
+
+const doctorsRouter = Router();
+
+doctorsRouter.get("/", verifyToken, doctorsController.findAll);
+
+module.exports = doctorsRouter;
