# swagger_output.json
@@ -246,6 +246,9 @@
           "204": {
             "description": "Consulta cancelada com sucesso."
           },
+          "400": {
+            "description": "Bad Request"
+          },
           "401": {
             "description": "Unauthorized"
           },
@@ -253,7 +256,7 @@
             "description": "Forbidden"
           },
           "404": {
-            "description": "Consulta não encontrada."
+            "description": "Não é possível cancelar uma consulta concluída."
           },
           "500": {
             "description": "Problemas com o servidor."
@@ -285,6 +288,9 @@
           "204": {
             "description": "Consulta concluída com sucesso."
           },
+          "400": {
+            "description": "Bad Request"
+          },
           "401": {
             "description": "Unauthorized"
           },
@@ -292,7 +298,7 @@
             "description": "Forbidden"
           },
           "404": {
-            "description": "Consulta não encontrada."
+            "description": "Não é possível concluir uma consulta cancelada."
           },
           "500": {
             "description": "Problemas com o servidor."
@@ -405,6 +411,41 @@
           }
         }
       }
+    },
+    "/doctors/": {
+      "get": {
+        "tags": [
+          "Doctors"
+        ],
+        "description": "Endpoint para listagem médicos.",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "201": {
+            "schema": {
+              "$ref": "#/definitions/Doctors"
+            },
+            "description": "Lista de médicos encontrada."
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "500": {
+            "description": "Problemas com o servidor."
+          }
+        }
+      }
     }
   },
   "definitions": {
@@ -417,7 +458,7 @@
         },
         "password": {
           "type": "string",
-          "example": "123@4"
+          "example": "1418"
         }
       }
     },
@@ -434,7 +475,7 @@
         },
         "password": {
           "type": "string",
-          "example": "123@4"
+          "example": "1418"
         },
         "role": {
           "type": "string",
@@ -465,23 +506,73 @@
               "type": "string",
               "example": "Fulano de Tal"
             },
-            "email": {
-              "type": "string",
-              "example": "email@email.com"
-            },
             "password": {
               "type": "string",
-              "example": "123@4"
-            },
-            "role": {
-              "type": "string",
-              "example": "ADMIN"
+              "example": "1418"
             }
           }
         },
         "token": {
           "type": "string",
           "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VySWQiOiIzNTlhMzQ4OS0wMjUyLTQyOWQtOTI2YS02OWFlYTdhYWMzM2EiLCJlbWFpbCI6ImVtYWlsQGVtYWlsLmNvbSIsImlhdCI6MTcxNTE5NjYwOSwiZXhwIjoxNzE1MjAzODA5fQ.SAwWd63TQjr3oZSD32APCCeu5LiZXNmmQEVCCLCLgaY"
+        }
+      }
+    },
+    "Doctor": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string",
+          "example": "3961048c-9242-45a2-92b3-11d24023cd5b"
+        },
+        "name": {
+          "type": "string",
+          "example": "Victor Schwartz"
+        },
+        "specialty": {
+          "type": "string",
+          "example": "Cardiologista"
+        },
+        "CRM": {
+          "type": "string",
+          "example": "12345678"
+        },
+        "appointments": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "properties": {
+              "date": {
+                "type": "string",
+                "example": "2024-05-06"
+              },
+              "time": {
+                "type": "string",
+                "example": "15:00"
+              }
+            }
+          }
+        }
+      }
+    },
+    "DoctorDomain": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string",
+          "example": "3961048c-9242-45a2-92b3-11d24023cd5b"
+        },
+        "name": {
+          "type": "string",
+          "example": "Victor Schwartz"
+        },
+        "specialty": {
+          "type": "string",
+          "example": "Cardiologista"
+        },
+        "CRM": {
+          "type": "string",
+          "example": "12345678"
         }
       }
     },
@@ -492,14 +583,6 @@
           "type": "string",
           "example": "3961048c-9242-45a2-92b3-11d24023cd5b"
         },
-        "specialty": {
-          "type": "string",
-          "example": "Cardiologista"
-        },
-        "doctor": {
-          "type": "string",
-          "example": "Victor Schwartz"
-        },
         "date": {
           "type": "string",
           "example": "2024-05-06"
@@ -508,26 +591,32 @@
           "type": "string",
           "example": "15:00"
         },
-        "obs": {
-          "type": "string",
-          "example": "Dores constantes"
-        },
         "status": {
           "type": "string",
           "example": "SCHEDULED"
+        },
+        "userId": {
+          "type": "string",
+          "example": "3961048c-9242-45a2-92b3-11d24023cd5b"
+        },
+        "doctorId": {
+          "type": "string",
+          "example": "3961048c-9242-45a2-92b3-11d24023cd5b"
+        },
+        "user": {
+          "$ref": "#/definitions/UserDomain"
+        },
+        "doctor": {
+          "$ref": "#/definitions/DoctorDomain"
         }
       }
     },
     "AddAppointment": {
       "type": "object",
       "properties": {
-        "specialty": {
+        "doctorId": {
           "type": "string",
-          "example": "Cardiologista"
-        },
-        "doctor": {
-          "type": "string",
-          "example": "Victor Schwartz"
+          "example": "3961048c-9242-45a2-92b3-11d24023cd5b"
         },
         "date": {
           "type": "string",
@@ -536,10 +625,6 @@
         "time": {
           "type": "string",
           "example": "15:00"
-        },
-        "obs": {
-          "type": "string",
-          "example": "Dores constantes"
         }
       }
     },
@@ -553,6 +638,12 @@
       "type": "array",
       "items": {
         "$ref": "#/definitions/UserDomain"
+      }
+    },
+    "Doctors": {
+      "type": "array",
+      "items": {
+        "$ref": "#/definitions/Doctor"
       }
     }
   }
